--- a/5e_artisanal_database/magic_items/html/5.2_srd_(d&d_2024)/spell-scroll.html
+++ b/5e_artisanal_database/magic_items/html/5.2_srd_(d&d_2024)/spell-scroll.html
@@ -16,6 +16,81 @@
 <li><strong>Attunement:</strong> No</li>
 <li><strong>Source:</strong> 5.2 SRD (D&amp;D 2024)</li>
 </ul>
-<p>A Spell Scroll (Cantrip) or Spell Scroll (Level 1) is a magic item that bears the words of a cantrip or level 1 spell, respectively, determined by the scroll's creator. If the spell is on your class's spell list, you can read the scroll and cast the spell using its normal casting time and without providing any Material components. If the spell requires a saving throw or an attack roll, the spell save DC is 13, and the attack bonus is +5. The scroll disintegrates when the casting is completed.</p><p><a href="../../../licensing.html">Licensing</a> – <a href="../../md/5.2_srd_(d&d_2024)/spell-scroll.md">Markdown Format</a></p>
+<p>A <em>Spell Scroll</em> bears the words of a single spell, written in a mystical cipher. If the spell is on your spell list, you can read the scroll and cast its spell without Material components. Otherwise, the scroll is unintelligible. Casting the spell by reading the scroll requires the spell's normal casting time. Once the spell is cast, the scroll crumbles to dust. If the casting is interrupted, the scroll isn't lost.</p>
+<p>If the spell is on your spell list but of a higher level than you can normally cast, you make an ability check using your spellcasting ability to determine whether you cast the spell. The DC equals 10 plus the spell's level. On a failed check, the spell disappears from the scroll with no other effect.</p>
+<p>The level of the spell on the scroll determines the spell's saving throw DC and attack bonus, as well as the scroll's rarity, as shown in the following table.</p>
+<table>
+<thead>
+<tr>
+<th>Spell Level</th>
+<th>Rarity</th>
+<th>Save DC</th>
+<th>Attack Bonus</th>
+</tr>
+</thead>
+<tbody>
+<tr>
+<td>Cantrip</td>
+<td>Common</td>
+<td>13</td>
+<td>+5</td>
+</tr>
+<tr>
+<td>1</td>
+<td>Common</td>
+<td>13</td>
+<td>+5</td>
+</tr>
+<tr>
+<td>2</td>
+<td>Uncommon</td>
+<td>13</td>
+<td>+5</td>
+</tr>
+<tr>
+<td>3</td>
+<td>Uncommon</td>
+<td>15</td>
+<td>+7</td>
+</tr>
+<tr>
+<td>4</td>
+<td>Rare</td>
+<td>15</td>
+<td>+7</td>
+</tr>
+<tr>
+<td>5</td>
+<td>Rare</td>
+<td>17</td>
+<td>+9</td>
+</tr>
+<tr>
+<td>6</td>
+<td>Very Rare</td>
+<td>17</td>
+<td>+9</td>
+</tr>
+<tr>
+<td>7</td>
+<td>Very Rare</td>
+<td>18</td>
+<td>+10</td>
+</tr>
+<tr>
+<td>8</td>
+<td>Very Rare</td>
+<td>18</td>
+<td>+10</td>
+</tr>
+<tr>
+<td>9</td>
+<td>Legendary</td>
+<td>19</td>
+<td>+11</td>
+</tr>
+</tbody>
+</table>
+<p><strong><em>Copying a Scroll into a Spellbook.</em></strong> A Wizard spell on a <em>Spell Scroll</em> can be copied into a spellbook. When a spell is copied in this way, the copier must succeed on an Intelligence (Arcana) check with a DC equal to 10 plus the spell's level. On a successful check, the spell is copied. Whether the check succeeds or fails, the <em>Spell Scroll</em> is destroyed.</p><p><a href="../../../licensing.html">Licensing</a> – <a href="../../md/5.2_srd_(d&d_2024)/spell-scroll.md">Markdown Format</a></p>
 </body>
 </html>
