--- a/5e_artisanal_database/monsters/html/tome_of_beasts_2023/redhag-tob1-2023.html
+++ b/5e_artisanal_database/monsters/html/tome_of_beasts_2023/redhag-tob1-2023.html
@@ -55,6 +55,7 @@
 </ul>
 <h3>Actions</h3>
 <ul>
+<li><strong>Multiattack:</strong> The hag makes two Claw attacks or three Blood Bolt attacks. She can replace one attack with a use of Spellcasting.</li>
 <li><strong>Claw:</strong> Melee Weapon Attack: +7 to hit, reach 5 ft., one target. Hit: 13 (2d8 + 4) slashing damage plus 9 (2d8) necrotic damage.</li>
 <li><strong>Blood Bolt:</strong> Ranged Spell Attack: +8 to hit, range 60 ft., one target. Hit: 14 (2d8 + 5) necrotic damage. If the target is a creature with blood, it must succeed on a DC 16 Constitution saving throw or be poisoned until the end of its next turn.</li>
 <li><strong>Siphon Blood (Recharge 5-6):</strong> The red hag drains blood from nearby creatures. Each creature that isn't a Construct or Undead within 20 feet of the red hag must make a DC 16 Constitution saving throw, taking 35 (10d6) necrotic damage on a failed save, or half as much damage on a successful one. If at least one creature fails the saving throw, the next spell the red hag casts is cast as if the spell used a spell slot two levels higher than the spell's lowest level.</li>
